Linked Password Generator

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                 </a>
 
-                <a href="">
+                <a href="https://gibsona475.github.io/random-password/">
                     <div class="project">
                         <h3>
                             Random Password Generator
