--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="about" class="about">
         <img src="https://avatars.githubusercontent.com/u/81275092" alt="Anthony Gibson Pic">
         <h1> Anthony Gibson</h1>
-        <h2> Full-Stack Engineer at your service!</h2>
+        <h2> Full-Stack Web Engineer at your service!</h2>
         <h4> Looking to take your company's website to the next level?</h4>
     </section>
 
@@ -109,7 +109,7 @@
                     </div>
                 </a>
 
-                <a href="./assets/docs/Anthony-Gibson-Resume.pdf" target="_blank">
+                <a href="https://www.canva.com/design/DAEN1jAJqSg/jTxJa3Q8JYvuq1z2B2lNAQ/view?utm_content=DAEN1jAJqSg&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton" target="_blank">
                     <div class="project">
                         <h3>
                            My Resume
@@ -144,9 +144,6 @@
       
         <!--<h4>Email: <a href="mailto:mrangryeyes@gmail.com">mrangryeyes@gmail.com</a></h4>--> 
         
-
-
-
     </footer>
 </body>
 
