--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <section id="about" class="about">
         <img src="https://avatars.githubusercontent.com/u/81275092" alt="Anthony Gibson Pic">
         <h1> Anthony Gibson</h1>
-        <h2> Full-Stack Web Engineer at your service!</h2>
-        <h4> Looking to take your company's website to the next level?</h4>
+        <h2> Full-Stack Web Engineer at your service</h2>
+        <h4> Looking to take your company's website to the next level? Bring your site up to date to compete in todays market</h4>
     </section>
 
     <section id="portfolio" class="portfolio">
